erDiagram
  authors ||--o{ posts : writes
  posts ||--o{ post_tags : tagged_with
  tags ||--o{ post_tags : references
  authors ||--o{ media_assets : uploads
  posts ||--o{ post_media : uses
  media_assets ||--o{ post_media : attached_to

  authors {
    bigint id PK
    text email
  }

  posts {
    bigint id PK
    bigint author_id FK
    text slug
    text status
    timestamptz published_at
  }

  tags {
    bigint id PK
    text slug
    text label
  }

  post_tags {
    bigint post_id PK,FK
    bigint tag_id PK,FK
  }

  media_assets {
    bigint id PK
    bigint author_id FK
    text url
    text kind
  }

  post_media {
    bigint post_id PK,FK
    bigint media_id PK,FK
    text role
  }
